--- a/rotion-app/package.json
+++ b/rotion-app/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
+    "clsx": "^1.2.1",
+    "cmdk": "^0.1.20",
+    "phosphor-react": "^1.4.1",
     "sass": "^1.56.1"
   },
   "devDependencies": {
