--- a/rotion-app/package.json
+++ b/rotion-app/package.json
@@ -25,7 +25,9 @@
     "@electron-toolkit/utils": "^1.0.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.1.20",
+    "electron-router-dom": "^1.0.5",
     "phosphor-react": "^1.4.1",
+    "react-router-dom": "^6.4.4",
     "sass": "^1.56.1"
   },
   "devDependencies": {
