--- a/rotion-app/package.json
+++ b/rotion-app/package.json
@@ -23,6 +23,15 @@
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
     "@electron-toolkit/utils": "^1.0.2",
+    "@tiptap/extension-document": "^2.0.0-beta.205",
+    "@tiptap/extension-highlight": "^2.0.0-beta.205",
+    "@tiptap/extension-image": "^2.0.0-beta.205",
+    "@tiptap/extension-placeholder": "^2.0.0-beta.205",
+    "@tiptap/extension-task-item": "^2.0.0-beta.205",
+    "@tiptap/extension-task-list": "^2.0.0-beta.205",
+    "@tiptap/extension-typography": "^2.0.0-beta.205",
+    "@tiptap/react": "^2.0.0-beta.205",
+    "@tiptap/starter-kit": "^2.0.0-beta.205",
     "clsx": "^1.2.1",
     "cmdk": "^0.1.20",
     "electron-router-dom": "^1.0.5",
@@ -34,6 +43,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.3",
     "@rocketseat/eslint-config": "^1.1.3",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/node": "16.11.22",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
