--- a/rotion-app/package.json
+++ b/rotion-app/package.json
@@ -37,6 +37,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.1.20",
     "electron-router-dom": "^1.0.5",
+    "electron-store": "^8.1.0",
     "phosphor-react": "^1.4.1",
     "react-router-dom": "^6.4.4",
     "sass": "^1.56.1"
@@ -60,6 +61,7 @@
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "vite-tsconfig-paths": "^4.0.2"
   }
 }
