--- a/rotion-app/package.json
+++ b/rotion-app/package.json
@@ -27,7 +27,6 @@
     "@tanstack/react-query": "^4.19.1",
     "@tiptap/extension-document": "^2.0.0-beta.205",
     "@tiptap/extension-highlight": "^2.0.0-beta.205",
-    "@tiptap/extension-image": "^2.0.0-beta.205",
     "@tiptap/extension-placeholder": "^2.0.0-beta.205",
     "@tiptap/extension-task-item": "^2.0.0-beta.205",
     "@tiptap/extension-task-list": "^2.0.0-beta.205",
@@ -38,6 +37,7 @@
     "cmdk": "^0.1.20",
     "electron-router-dom": "^1.0.5",
     "electron-store": "^8.1.0",
+    "lowlight": "^2.8.0",
     "phosphor-react": "^1.4.1",
     "react-router-dom": "^6.4.4",
     "sass": "^1.56.1"
