--- a/rotion-app/.github/workflows/realease.yml
+++ b/rotion-app/.github/workflows/realease.yml
@@ -4,8 +4,8 @@ on:
 
 jobs:
   release:
-    if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ${{ matrix.os }}
+    if: startsWith(github.ref, 'refs/tags/v') #verificando a versão
+    runs-on: ${{ matrix.os }} #execute em paralelo para varias versão
 
     strategy:
       matrix:
