--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.jefferdeveloper.rotion
-productName: rotion-app
+productName: Rotion
 directories:
   buildResources: build
 files:
@@ -11,7 +11,7 @@ files:
 asarUnpack:
   - '**/*.{node,dll}'
 win:
-  executableName: rotion-app
+  executableName: rotion
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
@@ -33,7 +33,7 @@ linux:
     - rpm
     - pacman
     - freebsd
-  maintainer: jefferdeveloper.com
+  maintainer: com.jefferdeveloper.rotion
   synopsis: ${description}
   category: Utility
 appImage:
