--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rotion-app",
   "productName": "Rotion",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A Notion alternative written with electron",
   "main": "./out/main/index.js",
   "author": "jeffersoncharlles",
@@ -19,11 +19,14 @@
     "release": "electron-builder --publish always"
   },
    "build": {
-   "appId": "com.jefferdeveloper.rotion",
+   "appId": "com.jefferdeveloper.${name}",
    "win": {
      "target": "nsis",
      "icon": "resources/icon.ico"
-   }
+   },
+   "directories": {
+      "app": "."
+    }
   },
   "dependencies": {
     "@electron-toolkit/preload": "^1.0.2",
