--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rotion-app",
   "productName": "Rotion",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A Notion alternative written with electron",
   "main": "./out/main/index.js",
   "author": "jefferdeveloper.com.br",
@@ -26,8 +26,7 @@
    },
    "linux": {
       "target": [
-        "AppImage",
-        "deb"
+        "AppImage"
       ]
     }
   },
