--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,7 +11,7 @@ files:
 asarUnpack:
   - '**/*.{node,dll}'
 win:
-  executableName: rotion
+  executableName: ${name}
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
@@ -29,6 +29,7 @@ dmg:
 linux:
   target:
     - AppImage
+    - deb
   maintainer: jefferdeveloper.com.br
   synopsis: ${description}
   category: Utility
